fix fab visible on load and fix queue scroll

--- a/app/styles/group.scss
+++ b/app/styles/group.scss
@@ -2,6 +2,10 @@
 .group-page {
   position: relative;
   overflow: hidden;
+  .tab-content {
+    height: calc(100% - 42px);
+    overflow-y: scroll;
+  }
 }
 .group-page-home {
   height: 100%;
